--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
 DB_URL=mongodb+srv://anshikagupta:22Anshika@cluster0.98fggno.mongodb.net
 SECRET=KJGgwdmkdlkfhKHkj
+key=AIzaSyCj_21LavdwaKf_UkbwMBhtjaFRvON9gUM
